manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec: 
  selector: 
    app: app
  type: NodePort  
  ports:
  - name: http
    port: 80
    targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
    nodePort: 30007
