manifests/route.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-blue-green
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - name: app-default
  route:
  - destination:
      host: app
      subset: $COLOR_ACTIVE


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: 
  name: app-blue-green
spec:
  host: app
  subsets:
  - name: $COLOR_ACTIVE
  labels:
    color: $COLOR_ACTIVE
